# observability_playground

./: Makefile  README.md  Tiltfile
deploy-todo-backend/: Chart.yaml  values.yaml
deploy-todo-backend/templates/: deployment.yaml  service.yaml
deploy-todo-frontend/: Chart.yaml  values.yaml
deploy-todo-frontend/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
docker/: todobackend.Dockerfile  todofrontend.Dockerfile
ingress-nginx/: values.yaml
kube-prometheus-stack/: Chart.yaml  values.yaml
todo-backend/: Cargo.toml  build.rs
todo-backend/proto/: todobackend.proto
todo-backend/src/: client.rs  server.rs
todo-frontend/: Makefile  package-lock.json  package.json  server.js
todo-frontend/client/src/: App.js
todo-frontend/src/: App.js
